# ski-resort-demo

./: .gitignore  ARCHITECTURE.md  README.md  nuget.config
.github/agents/: maf-dotnet.agents.md  maf-python.agents.md  maf-voice.agents.md
.github/workflows/: agent-evals.yml
slides/: index.html  package-lock.json  package.json  styles.css  vite.config.ts
src/: AppHost.csproj  apphost.cs  aspire.config.json  ski-resort-demo.slnx
src/advisor-agent-dotnet/: .gitignore  AdvisorAgent.Dotnet.csproj  Program.cs
src/agent-evals-python/: README.md  pyproject.toml  run_eval.py
src/agent-evals-python/data/: ski_advisor_eval.jsonl
src/agent-evals-python/rubrics/: ski_advisor_rubric.json
src/data-generator/: .gitignore  README.md  go.mod  go.sum  main.go  main_test.go  telemetry.go
src/frontend/: package-lock.json  vite.config.ts
src/lift-traffic-agent-dotnet/: LiftTrafficAgent.Dotnet.csproj  Program.cs
src/responses-gateway/: Program.cs  ResponsesGateway.csproj
src/safety-agent-python/: pyproject.toml
src/service-defaults/: Extensions.cs
src/shared-services/: CosmosAgentSessionStore.cs  CosmosAgentSessionStoreExtensions.cs  CosmosChatHistoryProvider.cs  CosmosChatHistoryProviderExtensions.cs  CosmosChatMessageRepository.cs  ReductionStoragePolicy.cs  SharedServices.csproj
src/ski-coach-agent-python/: pyproject.toml
src/skills-provisioner/: Program.cs  SkillsProvisioner.csproj
src/voice-advisor-agent/: ConversationModels.cs  Program.cs  VoiceAdvisorAgent.csproj  VoiceConversationStore.cs  VoiceLiveAgentExtensions.cs  VoiceSessionTraceEmitter.cs  (+1 more)
(+31 files in other folders)
